horizontal scrollbar issue solve

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html, body {overflow-x: hidden !important;width: 100vw !important;}
 
 /* heqder css */
 
@@ -64,7 +64,7 @@
 
 .home-img {
   max-width: 100%;
-  max-height: 100%;
+  /* max-height: 100%; */
   border-radius: 5px;
 
 }
@@ -210,7 +210,7 @@ color: #000  ;
 }
 .product-img {
   height: 250px;
-  width: 250px;
+  max-width: 250px;
   object-fit: contain;
   border-radius: 12px;
 }
@@ -223,8 +223,8 @@ color: #000  ;
 }
 
 .signature-img {
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  max-width: 400px;
   object-fit: contain;
   margin-top: -200px;
 }
@@ -236,7 +236,7 @@ color: #000  ;
 }
 .book-img {
   height: 250px;
-  width: 250px;
+  max-width: 250px;
   object-fit: contain;
 }
 
@@ -271,7 +271,7 @@ color: #000  ;
 }
 .person-img {
   height: 300px;
-  width: 300px;
+  max-width: 300px;
   object-fit: contain;
   position: absolute;
   top: -65px;
@@ -331,7 +331,7 @@ color: #000  ;
 }
 
 .purple-img{
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   border-radius: 12px;
   /* margin: 10px; */
@@ -367,7 +367,7 @@ color: #000  ;
   /* height: 350px;
   width: 350px; */
   object-fit: contain;
-  width: 50%;
+  max-width: 40%;
 }
 
 .paragraph-div{
@@ -383,8 +383,8 @@ color: #000  ;
   bottom: 0;
   /* top: 20px; */
   right: -20px;
-  width: 200px;
-  height: 250px;
+  max-width: 200px;
+  max-height: 250px;
   object-fit: contain;
   padding: 20px;
   /* width: 20%; */
@@ -429,7 +429,7 @@ color: #000  ;
 }
 .cart-img-div{
   background: #fff;
-  width: 80px;
+  max-width: 80px;
   /* height: 80px; */
   margin: 10px;
   /* padding: 15px; */
@@ -543,9 +543,14 @@ color: #000  ;
 }
 .footer-btn{
   width: 100%;
-  padding: 6px;
+  /* padding: 6px; */
   margin: 5px;
   cursor: pointer;
+}
+
+.header-main, .section-4-container, .purple-gold-container, .footer-container {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 @media (max-width: 600px) {
   .header-main {
@@ -558,18 +563,18 @@ color: #000  ;
     font-size: 25px;
   }
   .logo {
-    height: 30px;
-    width: 30px;
+    height: auto;
+    max-width: 100%;
   }
-  .home {
+  /* .home {
     padding: 100px;
-  }
-  .home-img-div {
+  } */
+  /* .home-img-div {
     padding: 25px;
-  }
+  } */
   .img-main-div {
     flex-direction: column;
-   margin-right: 40px;
+   /* margin-right: 40px; */
   }
 
   .home-large-text {
@@ -593,9 +598,12 @@ color: #000  ;
     /* text-align: left; */
     text-align: center;
 
-    margin-right: 35px;
+    /* margin-right: 35px; */
   }
-
+  .person-img {
+    position: static;
+    margin: 0 auto;
+  }
   .title-2{
    
     font-size: 20px;
@@ -620,7 +628,7 @@ color: #000  ;
 
   font-size: 25px;
   text-align: center;
- margin-top: 180px;
+ /* margin-top: 180px; */
  padding: 0;
  /* width: 250px; */
   /* padding: 20px; */
@@ -630,14 +638,14 @@ color: #000  ;
 
 
   .flex-row-1 {
-    width: 100%;
+    /* max-width: 100%; */
     flex-direction: column;
     justify-content: center;
   }
 
   .signature-img {
-    height: 200px;
-    width: 200px;
+    /* height: auto; */
+    /* max-width: 200px; */
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -649,7 +657,7 @@ color: #000  ;
   }
 
   .product-img {
-    width: 100%;
+    max-width: 100%;
   }
 
   .shop-div-1 {
@@ -684,7 +692,7 @@ color: #000  ;
 .section-8-div{
   
   flex-direction: column;
-  width: 100%;
+  max-width: 100%;
 }
 
 
@@ -693,8 +701,8 @@ color: #000  ;
   /* bottom: 0; */
   /* top: 20px; */
   /* right: -20px; */
-  width: 150px;
-  height: 150px;
+ max-width: 150px;
+  /* height: 150px; */
   /* object-fit: contain; */
   /* padding: 20px; */
   /* width: 20%; */
@@ -714,7 +722,7 @@ color: #000  ;
 
 .cart-img-div{
   /* background: #fff; */
-  width: 40px;
+  max-width: 40px;
   /* margin: 0 auto; */
   /* height: 80px; */
   /* margin: 10px; */
@@ -726,7 +734,7 @@ color: #000  ;
   border-radius: 12px; */
 
   /* background: #fff; */
-  width: 250px;
+  max-width: 250px;
   /* height: 300px; */
   /* padding: 15px; */
   /* border-radius: 12px; */
@@ -745,7 +753,7 @@ color: #000  ;
 @media (min-width: 768px) {
   .header-main {
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
   }
 
   .img-main-div {
@@ -795,12 +803,12 @@ color: #000  ;
   .header-main {
     /* flex-direction: column; */
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
   }
 
   .product-img {
     height: 200px;
-    width: 200px;
+    max-width: 200px;
     object-fit: cover;
     border-radius: 12px;
   }
@@ -808,7 +816,7 @@ color: #000  ;
   .home-img {
     /* height: 457px; */
     /* width: 300px; */
-    width: 250px;
+    max-width: 250px;
     height: 200px;
   }
   .img-main-div {
@@ -834,7 +842,7 @@ color: #000  ;
     padding-bottom: 100px;
   }
   .book-img {
-    height: 200px;
+    max-height: 200px;
     width: 200px;
   }
   .two-book {
@@ -852,7 +860,7 @@ color: #000  ;
   .header-main {
     /* flex-direction: column; */
     width: 100%;
-    padding: 20px;
+    /* padding: 20px; */
   }
 
   .black-bg {
